--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" name="color-scheme" content="dark"/>
   <link rel="icon" type="image/svg+xml" href="/SuperMeatBoy.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Meat Party</title>
+  <title>HardCode</title>
 </head>
 
 <body>
